docs: add rswag for event_members#reviews
